--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
         </ul>
       </div>
     </div>
-    <div class="main-div"></div>
+    <div class="main-div">
+      <div class="container-main-content">
+        <h1>Encontre o seu lugar!</h1>
+        <p>
+          F4Life e uma empresa de alugueis de republicas para pessoas
+          universitarias.
+        </p>
+        <a href="#" class="saiba-mais">Saiba mais</a>
+      </div>
+      <div class="sem-imagem">g</div>
+    </div>
     <div class="main-div div-about"></div>
     <div class="main-div"></div>
     <div class="main-nav"></div>
