add about section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,24 @@
       </div>
       <div class="sem-imagem">g</div>
     </div>
-    <div class="main-div div-about"></div>
+    <div class="dark-blue">
+      <section class="about-section">
+        <div class="about">
+          <h2>Quem somos?</h2>
+          <p>
+            F4Life e uma empresa de alugueis de republicas para pessoas
+            universitarias.
+          </p>
+          <p>
+            similar aos modelos de quinto andar e loft, a empresa realiza
+            reformas e prepara moradias para recepcao de pessoas universitarias
+            em um ambiente especifico e otimizado para a vida de graduacao.
+          </p>
+        </div>
+        <div class="no-image">bug</div>
+      </section>
+    </div>
+
     <div class="main-div"></div>
     <div class="main-nav"></div>
   </body>
