--- a/index.html
+++ b/index.html
@@ -48,7 +48,19 @@
       </section>
     </div>
 
-    <div class="main-div"></div>
+    <div class="main-div">
+      <div>
+        <h3>Entre em contato</h3>
+        <form>
+          <label for="">E-mail</label>
+          <input type="email" placeholder="email" />
+          <label for="">Mensagem</label>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <button>Enviar</button>
+        </form>
+      </div>
+      <div>yutgh</div>
+    </div>
     <div class="main-nav"></div>
   </body>
 </html>
