solve image heigth contact

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
       </section>
     </div>
 
-    <div class="main-div">
-      <div>
+
+<div class="branco">
+    <div class="about-section">
+      <div class="about">
         <h3>Entre em contato</h3>
-        <form>
+        <form class="">
           <label for="">E-mail</label>
           <input type="email" placeholder="email" />
           <label for="">Mensagem</label>
@@ -59,8 +61,12 @@
           <button>Enviar</button>
         </form>
       </div>
-      <div>yutgh</div>
+      <div class="no-image">y</div>
     </div>
-    <div class="main-nav"></div>
+  </div>
+
+    <footer>
+      <div class="main-nav">
+    </footer>
   </body>
 </html>
