improve contact form

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           F4Life e uma empresa de alugueis de republicas para pessoas
           universitarias.
         </p>
-        <a href="#" class="saiba-mais">Saiba mais</a>
+        <a href="#" class="button">Saiba mais</a>
       </div>
       <div class="sem-imagem">g</div>
     </div>
@@ -52,13 +52,13 @@
 <div class="branco">
     <div class="about-section">
       <div class="about">
-        <h3>Entre em contato</h3>
+        <h2 class="header-contact">Entre em contato</h2>
         <form class="">
           <label for="">E-mail</label>
           <input type="email" placeholder="email" />
           <label for="">Mensagem</label>
-          <textarea name="" id="" cols="30" rows="10"></textarea>
-          <button>Enviar</button>
+          <textarea name="" id="" cols="30" rows="7"></textarea>
+          <button class="button">Enviar</button>
         </form>
       </div>
       <div class="no-image">y</div>
