finish main content non responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="main-nav">
-      <div class="logo">L</div>
+      <div class="logo"><img src="assets/images/logo.png" alt=""></div>
       <div class="container">
         <ul class="nav-links">
           <li>inicio</li>
@@ -19,17 +19,29 @@
         </ul>
       </div>
     </div>
-    <div class="main-div">
-      <div class="container-main-content">
+
+
+    <div class="branco">
+      <section class="about-section">
+      <div class="about">
         <h1>Encontre o seu lugar!</h1>
-        <p>
+        <p class="paragraph-dark-text">
           F4Life e uma empresa de alugueis de republicas para pessoas
           universitarias.
         </p>
         <a href="#" class="button">Saiba mais</a>
       </div>
-      <div class="sem-imagem">g</div>
+      <div class="no-image"><img src="assets/images/more.svg" alt=""></div>
+      </section>
     </div>
+
+
+
+
+
+
+
+
     <div class="dark-blue">
       <section class="about-section">
         <div class="about">
@@ -44,9 +56,13 @@
             em um ambiente especifico e otimizado para a vida de graduacao.
           </p>
         </div>
-        <div class="no-image">bug</div>
+        <div class="no-image"><img src="assets/images/pana.svg" alt=""></div>
       </section>
     </div>
+
+
+
+
 
 
 <div class="branco">
@@ -61,12 +77,13 @@
           <button class="button">Enviar</button>
         </form>
       </div>
-      <div class="no-image">y</div>
+      <div class="no-image"><img src="assets/images/cuate.svg" alt=""></div>
     </div>
   </div>
 
     <footer>
       <div class="main-nav">
+        <img src="assets/images/logo.png" alt="">
     </footer>
   </body>
 </html>
