finish footer non responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="main-nav">
-      <div class="logo"><img src="assets/images/logo.png" alt=""></div>
+      <div class="main-nav-container">
+    <img class="logo" src="assets/images/logo.png" alt="">
       <div class="container">
         <ul class="nav-links">
           <li>inicio</li>
@@ -18,9 +19,8 @@
           <li>entre em contato</li>
         </ul>
       </div>
+      </div>
     </div>
-
-
     <div class="branco">
       <section class="about-section">
       <div class="about">
@@ -34,14 +34,6 @@
       <div class="no-image"><img src="assets/images/more.svg" alt=""></div>
       </section>
     </div>
-
-
-
-
-
-
-
-
     <div class="dark-blue">
       <section class="about-section">
         <div class="about">
@@ -83,7 +75,15 @@
 
     <footer>
       <div class="main-nav">
-        <img src="assets/images/logo.png" alt="">
+        <section class="footer">
+        <img class="logo" src="assets/images/logo.png" alt="logo f4life">
+        <div class="redes-sociais">
+        <img src="assets/images/face.svg" alt="logo facebook">
+        <img src="assets/images/insta.svg" alt="logo instagram">
+        <img src="assets/images/twitter.svg" alt="logo twitter">
+       </div>
+        <p>Todos os direitos reservados © 2023 F4LIFE</p>
+     </section>
     </footer>
   </body>
 </html>
