--- a/index.html
+++ b/index.html
@@ -48,15 +48,11 @@
             em um ambiente especifico e otimizado para a vida de graduacao.
           </p>
         </div>
-        <div class="no-image"><img src="assets/images/pana.svg" alt=""></div>
+        <div class="no-image-text">
+          <img src="assets/images/pana.svg" alt="">
+        </div>
       </section>
     </div>
-
-
-
-
-
-
 <div class="branco">
     <div class="about-section">
       <div class="about">
@@ -72,17 +68,16 @@
       <div class="no-image"><img src="assets/images/cuate.svg" alt=""></div>
     </div>
   </div>
-
     <footer>
       <div class="main-nav">
         <section class="footer">
-        <img class="logo" src="assets/images/logo.png" alt="logo f4life">
+        <img class="logo not-showing" src="assets/images/logo.png" alt="logo f4life">
         <div class="redes-sociais">
         <img src="assets/images/face.svg" alt="logo facebook">
         <img src="assets/images/insta.svg" alt="logo instagram">
         <img src="assets/images/twitter.svg" alt="logo twitter">
        </div>
-        <p>Todos os direitos reservados © 2023 F4LIFE</p>
+        <p class="not-showing">Todos os direitos reservados © 2023 F4LIFE</p>
      </section>
     </footer>
   </body>
