--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="main-nav-container">
     <img class="logo" src="assets/images/logo.png" alt="">
       <div class="container">
+     <img class="hamburguer not-showing" src="assets/images/hamburguer.svg" alt="">
         <ul class="nav-links">
           <li>inicio</li>
           <li>quem somos?</li>
@@ -51,6 +52,28 @@
         <div class="no-image-text">
           <img src="assets/images/pana.svg" alt="">
         </div>
+      </section>
+    </div>
+
+    <div class="dark-blue testimonies">
+      <section class="about-section testimonies-section">
+        <div class="about">
+          <h2>Veja a opinião dos nossos clientes</h2>
+          <img src="assets/images/depoimento2.png" alt="">
+          <h3>Astrogildo</h3>
+          <p>
+            “A F4Life prestou um serviço incrível”
+          </p>
+
+        <img src="assets/images/depoimento1.png" alt="">
+        <h3>Creuza</h3>
+          <p>
+            “Serviço de qualidade com um preço justo”
+          </p>
+          <img src="assets/images/depoimento3.png" alt="">
+          <h3>Jurema</h3>
+          “Já tive experiência com outras empresas, 
+          mas a F4Life, sem duvidas tem o melhor serviço.”
       </section>
     </div>
 <div class="branco">
