add testimonies and make footer responsive

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </section>
     </div>
 
-    <div class="dark-blue testimonies">
+    <div class="dark-blue testimonies not-showing">
       <section class="about-section testimonies-section">
         <div class="about">
           <h2>Veja a opinião dos nossos clientes</h2>
@@ -94,13 +94,13 @@
     <footer>
       <div class="main-nav">
         <section class="footer">
-        <img class="logo not-showing" src="assets/images/logo.png" alt="logo f4life">
+        <img class="logo not-showing showing" src="assets/images/logo.png" alt="logo f4life">
         <div class="redes-sociais">
         <img src="assets/images/face.svg" alt="logo facebook">
         <img src="assets/images/insta.svg" alt="logo instagram">
         <img src="assets/images/twitter.svg" alt="logo twitter">
        </div>
-        <p class="not-showing">Todos os direitos reservados © 2023 F4LIFE</p>
+        <p class="not-showing showing">Todos os direitos reservados © 2023 F4LIFE</p>
      </section>
     </footer>
   </body>
